# m3-memory

./: .aider.conf.yml  .checkov.yaml  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .semgrepignore  .trivyignore  AGENTS.md  AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  CORE_FEATURES.md  ENVIRONMENT_VARIABLES.md  GEMINI.md  GETTING_STARTED.md  HOW-TO-UPGRADE.md  INSTALL.md  LICENSE  MANIFEST.in  MULTI_AGENT.md  NOTICE  QUICKSTART.md  README.md  ROADMAP.md  SETUP_INSTRUCTIONS.md  TECHNICAL_DETAILS.md  check_sync.py  conftest.py  diag_reasoning.py  fix_bugs.py  fix_db.py  install.sh  install_linux.md  install_os.py  (+25 more)
.aider/: protocols.md
.antigravity/: rules.md
.antigravity-plugin/: hooks.json  marketplace.json  mcp_config.json  plugin.json
.antigravity-plugin/agents/: curate-chatlog.md  curate-memory.md
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit  pre-push
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish.yml  star-history.yml  tool-catalog-drift.yml
.semgrep/: sql-dialect.yml
_assets/models/: README.md
agents/: chatlog-curator.md  curate-chatlog.md  curate-memory.md  memory-curator.md
benchmarks/Phase1/: PLAN.md  VARIANT_REPORT_4x500.md  VARIANT_REPORT_5x500.md  compare_runs.py  probe_ingest_cost.py  probe_ingest_cost_results.json  reingest.py  retrieval_audit.py  stamp_variants_from_chainlog.py
benchmarks/locomo/: INGEST_COST_PROBE.md  PLAN.md  README.md  analyze_handoff.py  analyze_prompt.py  bench_locomo.py  compare_runs.py  join_variant_reports.py  probe_ingest_cost.py  probe_issues.py  reingest.py  retrieval_audit.py
benchmarks/longmemeval/: LME-S_Benchmarking_Report.md  PLAN.md  PLAN2.md  README.md  bench_longmemeval.py  results.json
commands/: agents.md  doctor.md  export.md  find-in-chat.md  forget.md  get.md  graph.md  health.md  help.md  install.md  notify.md  save.md  search.md  status.md  tasks.md  write.md
commands/m3/: agents.md  doctor.md  export.md  find-in-chat.md  forget.md  get.md  graph.md  help.md  install.md  notify.md  save.md  search.md  status.md  tasks.md  write.md
config/: CLAUDE.md  aider.conf.yml  claude-settings.json  gemini-settings.json  zshenv.example  zshrc.example
config/claude-hooks/: protocol_check.sh
config/lists/: entity_graph_default.yaml  entity_graph_m3.yaml  entity_graph_v2.yaml
config/slm/: chatlog.yaml  connect_xai_grok_4_fast.yaml  contextual_keys.yaml  contextual_keys_haiku.yaml  default.yaml  enrich_anthropic_haiku.yaml  enrich_custom_stub.yaml  enrich_google_gemini.yaml  enrich_google_gemini_3_flash.yaml  enrich_google_gemini_3_flash_lite.yaml  enrich_local_gemma.yaml  entity_graph.yaml  (+16 more)
context/: ai_shortcuts.sh  deploy_ai_os.py
dashboard/: README.md
docs/: AGENT_INSTRUCTIONS.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD_WHEELS.md  CAPABILITY_MATRIX.md  CHANGELOG.md  CHANGELOG_2026.md  CHATLOG.md  CLI_REFERENCE.md  CODE_OF_CONDUCT.md  COMPARISON.md  COMPLIANCE.md  CONFIDENCE_AND_TRUST.md  CONTRIBUTING.md  CONVENTIONS.md  CORE_FEATURES.md  CUDA_INSTALL.md  DASHBOARD.md  DESIGN_PHILOSOPHIES.md  DOC_REORG_PLAN.md  DUAL_EMBED.md  EMBED_DEPLOYMENT.md  EMBED_INPUT_RECIPE.md  ENVIRONMENT_VARIABLES.md  EXTENDING.md  FAQ.md  FILES_MEMORY.md  FILE_INGESTION_PLAN.md  FIPS_COMPLIANCE.md  FIPS_MODULE_BOUNDARY.md  GDPR_COMPLIANCE.md  GETTING_STARTED.md  GOOD_FIRST_ISSUES.md  HERMES.md  HOMELAB_PATTERNS.md  HOW-TO-UPGRADE.md  M3V3_OXIDATION.md  M3_Comparison_Table.html  M3_Comparison_Table.md  M3_Compliance_CMMC.html  (+50 more)
examples/: AGENT_RULES.md  README.md
homelab-dashboard/: com.homelab.dashboard.plist  start_dashboard.sh
hooks/: hooks.json
m3_memory/: __init__.py  _platform.py  cli.py  crewai.py  embedder_admin.py  installer.py  langchain.py  pydantic_ai.py  rust_core_install.py  setup_gui.py  setup_wizard.py  team_cli.py
mac-agent/: requirements.txt
memory/: .chatlog_config.json  .chatlog_state.json  knowledge_helpers.py
sandbox-openclaw/: .env.example  .gitignore
scan-reports/: bandit.json  gitleaks.json  gitleaks.sarif  mypy.txt  osv-scanner.json  pip-audit.json  results_sarif.sarif  semgrep.sarif  trivy.json
scripts/: check_ingest.py  fix_bugs.py  fix_lint.py  inspect_s0.py  inspect_s0_v2.py  inventory_graph.py  metadata_filler.py  test_focus_fix.py
tests/: bench_e2e_retrieval.py  bench_entity_count.py  bench_oxidation.py  bench_oxidation_fts_packed.py  capture_entity_baseline.py  capture_migration_baseline.py  capture_retrieval_baseline.py  conftest.py  eval_files_ingest.py  eval_files_phase2.py  eval_files_phase3.py  eval_files_phase4.py  integration_dense_recovery_smoke.py  integration_sliding_window_long_rows_200.py  integration_sliding_window_on_chatlog.py  integration_sliding_window_on_chatlog_2k.py  smoke_embed_backend_stats.py  smoke_embed_connection_reuse.py  test_agent_config_selfheal.py  test_agent_isolation.py  test_agent_paths_probe.py  test_audit_trail.py  test_auth_utils.py  test_auto_related_link_scope.py  test_backend_conformance.py  test_backends_surface.py  test_backfill_content_hash.py  test_backup_reminder.py  test_belief_consolidation.py  test_bridge_timeout_pop.py  test_bulk_link_update.py  test_bypass_surface.py  test_chatlog_config.py  test_chatlog_cost_report.py  test_chatlog_hooks_success_criterion.py  test_chatlog_ingest_formats.py  test_chatlog_migrations.py  test_chatlog_perf.py  test_chatlog_pg_live.py  test_chatlog_prune_cap.py  (+180 more)
v3/: codebase_review_and_oxidation_plan.md  m3_v3_advanced_optimizations.md  m3_v3_background_governor.md  m3_v3_hardened_security_mitigations.md  m3_v3_master_implementation_plan.md  m3_v3_milestone1_walkthrough.md  m3_v3_milestone3_walkthrough.md  m3_v3_phase_c_rust_oxidation_plan.md  m3_v3_resiliency_guards.md  m3_v3_scheduled_tasks_adaptation.md  proposed_dependency_optimizations.md
(+453 files in other folders)
