[build-system]
# setuptools>=77 is required for the SPDX `license = "Apache-2.0"` form;
# <82 keeps it within torch 2.11's declared `setuptools<82` pin so an isolated
# build doesn't trigger a dependency-conflict warning.
requires = ["setuptools>=77,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m3-memory"
version = "2026.5.30.2"
description = "Local-first Agentic Memory Layer Framework for MCP Agents • 101 tools • Hybrid search (FTS5 + vector + MMR) • Directory ingestion & file-memory • GDPR • FIPS 140-3 ready • 100% local"

readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "skynetcmd", email = "skynetcmd@users.noreply.github.com" },
    { name = "Gemini CLI", email = "gemini-cli@google.com" }
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "agentic-memory",
    "ai-memory",
    "long-term-memory",
    "local-llm",
    "claude",
    "claude-code",
    "gemini",
    "gemini-cli",
    "aider",
    "rag",
    "rag-memory",
    "vector-search",
    "hybrid-search",
    "sqlite",
    "gdpr",
    "privacy",
    "homelab",
    "ai-agents",
    "ollama",
    "contradiction-detection",
    "bitemporal",
    "local-first",
    "multi-agent",
    "knowledge-graph",
    "persistent-memory",
    "longmemeval",
    "fips-140-3",
    "openclaw",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.2.4,<4",
    "mcp>=1.27.0,<2",
    "httpx[http2]>=0.28.1,<1",
    "requests>=2.33.1,<3",
    "psycopg2-binary>=2.9.12,<3",
    "chromadb-client>=1.5.8,<2",
    "cryptography>=46.0.7,<48",
    "keyring>=25.7.0,<26",
    "numpy>=2.4.4,<3",
    "python-dotenv>=1.2.2,<2",
    "PyYAML>=6.0.3,<7",
    "psutil>=7.2.2,<8",
    "tqdm>=4.67.3,<5",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2.0,<4"]
# "Project Oxidation" Rust compute core is installed manually until
# m3-core-rs publishes wheels to PyPI:
#   pip install "m3-core-rs @ git+https://github.com/skynetcmd/m3-core-rs.git@v0.9.0#subdirectory=crates/m3-core-py"
# Optional by design — m3-memory runs fully on the Python path without it, and
# M3_CORE_RS_DISABLE forces the Python path even when installed. The git-based
# install builds from source, so it needs a Rust toolchain (>=1.94) + maturin
# on the installing machine.
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "ruff>=0.15.12,<1",
    "mypy>=1.20.2,<2",
    "types-requests>=2.33.0.20260408",
    # Capped <82 to track the setuptools<82 cap (torch 2.11 pins setuptools<82).
    "types-setuptools>=77.0.0,<82",
    "types-PyYAML>=6.0.0",
    "twine>=6.2.0,<7",
    "build>=1.4.4,<2",
]

[project.scripts]
m3 = "m3_memory.cli:main"
mcp-memory = "m3_memory.cli:main"
m3-team = "m3_memory.team_cli:main"

[project.urls]
Homepage = "https://github.com/skynetcmd/m3-memory"
Repository = "https://github.com/skynetcmd/m3-memory"
"Bug Tracker" = "https://github.com/skynetcmd/m3-memory/issues"
Changelog = "https://github.com/skynetcmd/m3-memory/blob/main/docs/CHANGELOG.md"
Documentation = "https://github.com/skynetcmd/m3-memory/blob/main/docs/AGENT_INSTRUCTIONS.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["m3_memory*"]
# The Hermes plugin under m3_memory/integrations/hermes/ is VENDORED DATA, not an
# importable package — its __init__.py imports hermes-agent modules that exist
# only after it's copied into a hermes-agent checkout. Exclude it from package
# discovery so setuptools never treats it as code; it ships as package-data
# below instead.
exclude = ["m3_memory.integrations*"]

[tool.setuptools.package-data]
m3_memory = [
    "bin/*.py",
    "memory/migrations/*.sql",
    "mcp.json.example",
    "mcp-server.json",
    # Hermes Agent memory-provider plugin, vendored under the package so it ships
    # in the wheel for `pip install` users. Treated as data (see exclude above).
    # The setup wizard's _find_m3_hermes_plugin_src() resolves this packaged copy.
    "integrations/hermes/*.py",
    "integrations/hermes/*.yaml",
    "integrations/hermes/*.md",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501: long lines handled by editor wrap, not blocker for this codebase.
# E402: many bin/ entrypoints do sys.path setup or lazy imports deliberately
#   before importing project modules — buried imports are intentional.
# E701/E702: one-liner `if x: return` / `try: foo` is used throughout bench
#   and ingest scripts as a terseness choice; not a readability problem here.
ignore = ["E501", "E402", "E701", "E702"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Match the codebase's pre-PEP 484 style: `def f(x: str = None)` means Optional.
implicit_optional = true
# False positives from narrowing around None checks are noisy in legacy code
# that still leans on runtime checks rather than type guards.
strict_optional = false
# warn_unused_ignores off globally because per-file overrides below use
# ignore_errors = true (which trips this warning on real # type: ignore lines
# elsewhere in those modules). Revisit if we get the legacy files typed.
warn_unused_ignores = false

# ── Per-module overrides ──────────────────────────────────────────────────────
# memory_bridge.py exposes every tool from mcp_tool_catalog at import time via
# `globals()[name] = fn`. Mypy can't see these, so any module that imports a
# tool-shaped name from memory_bridge will light up with attr-defined errors
# (~55 of 184 total). The registration pattern is load-bearing — refactoring
# to an explicit registry would touch every call site across bin/ and memory/.
# Silence the false-positive class by not checking memory_bridge itself and
# ignoring attr-defined on its importers.
[[tool.mypy.overrides]]
module = "memory_bridge"
ignore_errors = true

# Legacy untyped modules — typing them is a separate project, not a CI gate.
# Each file listed here has >3 errors that aren't real bugs, just missing
# annotations on params/returns or loose dict/list unions. Trim this list as
# modules get typed.
[[tool.mypy.overrides]]
module = [
    "test_memory_bridge",
    "memory_core",
    "m3_sdk",
    "bench_locomo",
    "chatlog_core",
    "agent_protocol",
    "chatlog_init",
    "knowledge_helpers",
    "mission_control",
    "chatlog_redaction",
    "temporal_utils",
    "debug_agent_bridge",
    "setup_secret",
    "migrate_flat_memory",
    "chatlog_ingest",
    "aider_patch",
    "test_mission_control",
    "news_fetcher",
    "mcp_proxy",
    "custom_tool_bridge",
    "embed_agent_instructions",
    "chroma_sync_cli",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: long-running tests (>1s); use -m 'not slow' to skip",
]

[tool.bandit]
exclude_dirs = ["tests", "benchmarks", ".venv", "venv"]
# B101: asserts in tests are expected.
# B404: every bin/ tool that shells out imports `subprocess`; the import itself
#   isn't a vulnerability, only specific call patterns are.
# B110: try/except/pass is idiomatic in the bridge/daemon fail-open paths in
#   this repo. Individual cases that hide real bugs are addressed via code
#   review, not by flagging every swallow.
# B112: try/except/continue — same reasoning as B110.
# B603: subprocess call with shell=False and a static argv list is safe here;
#   all subprocess targets in bin/ are OS binaries (git, security, lsof, etc.)
#   invoked with non-user-controllable args. Call sites that take user input
#   are already audited.
# B607: partial executable paths ("git", "docker") rely on $PATH, which in
#   our user-facing CLI context is acceptable. Hardened deployments should
#   set absolute paths via env.
# B608: f-string SQL construction in this repo only ever inlines generated
#   `?` placeholder lists or static column names — all user values reach the
#   DB through the parameter tuple. Bandit's regex can't distinguish safe
#   from unsafe f-string SQL; code review catches new unsafe sites.
# B311: `random.sample` flagged as not cryptographically secure. The three
#   call sites in bin/m3_enrich.py are statistical sampling for the
#   `--sample N` CLI flag (pick N random conversations to enrich for
#   dev/bench runs); reproducible sampling is the goal, not entropy.
#   `secrets` module would be wrong here. Documented in
#   docs/audits/security-scan-2026-05-01.md.
skips = ["B101", "B110", "B112", "B311", "B404", "B603", "B607", "B608"]
