[build-system]
# setuptools>=77 is required for the SPDX `license = "Apache-2.0"` form;
# <82 keeps it within torch 2.11's declared `setuptools<82` pin so an isolated
# build doesn't trigger a dependency-conflict warning.
requires = ["setuptools>=77,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m3-memory"
version = "2026.7.7.0"
description = "Local-first Memory Framework for AI Agents · 99.2% LongMemEval-S retrieval @ k=10 · Supports Claude · Gemini · Antigravity · OpenCode · OpenClaw · Hermes · MCP-native and plugins · Hybrid search (FTS5 + vector + MMR) · GDPR · FIPS 140-3 deployment-ready · 100% local (fully offline) or cloud capable"

readme = "README.md"
license = "Apache-2.0"
# Ship the LICENSE and the Apache NOTICE (attribution to skynetCMD) in every
# sdist/wheel — setuptools>=77 packages these globs into the distribution.
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [
    { name = "skynetcmd", email = "skynetcmd@users.noreply.github.com" },
    { name = "Gemini CLI", email = "gemini-cli@google.com" }
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "agentic-memory",
    "ai-memory",
    "long-term-memory",
    "local-llm",
    "claude",
    "claude-code",
    "gemini",
    "gemini-cli",
    "aider",
    "rag",
    "rag-memory",
    "vector-search",
    "hybrid-search",
    "sqlite",
    "gdpr",
    "privacy",
    "homelab",
    "ai-agents",
    "ollama",
    "contradiction-detection",
    "bitemporal",
    "local-first",
    "multi-agent",
    "knowledge-graph",
    "persistent-memory",
    "longmemeval",
    "fips-140-3",
    "openclaw",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.2.4,<4",
    "mcp>=1.27.0,<2",
    "httpx[http2]>=0.28.1,<1",
    "requests>=2.33.1,<3",
    "psycopg2-binary>=2.9.12,<3",
    "chromadb-client>=1.5.8,<2",
    "cryptography>=48.0.1,<49",
    "keyring>=25.7.0,<26",
    # Cap <2.5: numpy 2.5.0's stub uses PEP 695 `type` syntax that mypy rejects
    # under python_version 3.11 (our floor). See requirements.txt for the full note.
    "numpy>=2.4.4,<2.5",
    "python-dotenv>=1.2.2,<2",
    "PyYAML>=6.0.3,<7",
    "psutil>=7.2.2,<8",
    "tqdm>=4.67.3,<5",
    # SQL-injection AST guard in bin/memory/util.py::_check_content_safety.
    # Was in requirements.txt but missing here, so `pip install -e .` omitted it
    # and the guard silently degraded to a no-op (returning "safe" for DROP/
    # DELETE/ALTER). Runtime dependency, not optional.
    "sqlglot>=30.6.0,<31",
    # Transitively pulled by httpx/requests, but pinned directly to floor out
    # PYSEC-2026-141/142 (matches requirements.txt) — a security pin belongs in
    # the installed metadata, not only the dev requirements file.
    "urllib3>=2.7.0,<3",
    # Fuzzy string matching for entity coalescing. Has a difflib fallback, so
    # it's a perf/quality dep — but small, pure, and used on a common path, so
    # kept in core (requirements.txt had it; pyproject omitted it).
    "rapidfuzz>=3.14,<4",
    # PDF + HTML parsing used by files-ingestion / report paths.
    "fpdf2>=2.8.7,<3",
    "beautifulsoup4>=4.14.3,<5",
    # Hardened XML parsing (XXE / entity-expansion defense) for
    # bin/doctor/schedule_probe.py, which parses `schtasks` XML output. Was only
    # transitively present (via fpdf2) — pinned directly so the safe path is
    # guaranteed on a fresh install.
    "defusedxml>=0.7.1,<1",
    # Windows-only: keyring backend + hook process control. Marker-gated so it
    # installs only where relevant.
    "pywin32>=311; sys_platform == 'win32'",
    # macOS-only: CoreWLAN for thermal/network probes.
    "pyobjc-framework-CoreWLAN; sys_platform == 'darwin'",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2.0,<4"]
# Web surfaces: the FastAPI dashboard (bin/dashboard_server.py) and the
# OpenAI-compatible MCP proxy (bin/mcp_proxy.py). Optional by design — the core
# MCP server + CLI need neither. Were in requirements.txt but missing from
# pyproject entirely, so `pip install m3-memory` never provided them and the
# dashboard/proxy failed to import.
web = [
    "fastapi>=0.136.1,<1",
    "uvicorn>=0.46.0,<1",
]
# Local embedding-server stack (bin/embed_server*.py, sentence-transformers /
# FlagEmbedding path). Heavy (pulls torch) and optional — the in-process Rust
# tier-1 embedder or an external OpenAI-compatible embed endpoint cover the
# common case. Kept OUT of core so a default install stays light. See
# requirements.txt for the transformers<5 / torch pin rationale.
embed-server = [
    "sentence-transformers>=5.4.1,<6",
    "transformers>=4.53.0,<5",
    "torch>=2.11.0,<3",
    "scipy>=1.17.1,<2",
]
# Local zero-shot NER for bin/m3_entities_gliner.py — a fast on-device
# alternative to the LLM-based entity extractor. Optional by design: core runs
# fully without it (bin/m3_entities.py needs no extra deps). Pulls torch.
entity-ner = ["gliner>=0.2.26"]
# Native SQLite vector search via the sqlite-vec extension. The loader at
# bin/sqlite_pragmas.py loads it opportunistically (sqlite_vec.load(conn)) and
# the semantic-search path in bin/memory/search.py uses the vec0 functions when
# present. Optional by design: core runs fully without it (the Python/numpy
# cosine path is the fallback). The PyPI wheel ships the platform-native
# extension binary, so no separate compilation/bundling step is needed.
vector = ["sqlite-vec>=0.1.6"]
# "Project Oxidation" Rust compute core is installed manually until
# m3-core-rs publishes wheels to PyPI:
#   pip install "m3-core-rs @ git+https://github.com/skynetcmd/m3-core-rs.git@v0.9.0#subdirectory=crates/m3-core-py"
# Optional by design — m3-memory runs fully on the Python path without it, and
# M3_CORE_RS_DISABLE forces the Python path even when installed. The git-based
# install builds from source, so it needs a Rust toolchain (>=1.94) + maturin
# on the installing machine.
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "ruff>=0.15.12,<1",
    "mypy>=1.20.2,<2",
    "types-requests>=2.33.0.20260408",
    # Capped <82 to track the setuptools<82 cap (torch 2.11 pins setuptools<82).
    "types-setuptools>=77.0.0,<82",
    "types-PyYAML>=6.0.0",
    "twine>=6.2.0,<7",
    "build>=1.4.4,<2",
]

[project.scripts]
m3 = "m3_memory.cli:main"
mcp-memory = "m3_memory.cli:main"
m3-team = "m3_memory.team_cli:main"

[project.urls]
Homepage = "https://github.com/skynetcmd/m3-memory"
Repository = "https://github.com/skynetcmd/m3-memory"
"Bug Tracker" = "https://github.com/skynetcmd/m3-memory/issues"
Changelog = "https://github.com/skynetcmd/m3-memory/blob/main/docs/CHANGELOG.md"
Documentation = "https://github.com/skynetcmd/m3-memory/blob/main/docs/AGENT_INSTRUCTIONS.md"

# NOTE: package discovery, package_dir and package_data are defined in setup.py,
# NOT here. The root-level payload trees (bin/, docs/, _assets/, examples/) must
# be MAPPED into the m3_memory package (setuptools has no pyproject force-include),
# which requires programmatic package_dir/package_data — so setup.py is the single
# source for all three. Declaring [tool.setuptools.packages.find] here as well
# would override setup.py's `packages=` and silently drop the payload from the
# wheel. Keep them out of pyproject. (Hermes vendored data + mcp examples are also
# handled in setup.py's mapping / MANIFEST graft.)

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501: long lines handled by editor wrap, not blocker for this codebase.
# E402: many bin/ entrypoints do sys.path setup or lazy imports deliberately
#   before importing project modules — buried imports are intentional.
# E701/E702: one-liner `if x: return` / `try: foo` is used throughout bench
#   and ingest scripts as a terseness choice; not a readability problem here.
# E741: single-letter vars (l, O, I) are used intentionally in math/loop contexts.
ignore = ["E501", "E402", "E701", "E702", "E741"]

[tool.ruff.lint.per-file-ignores]
# memory_core.py uses a module-level __getattr__ for lazy submodule dispatch.
# All private helpers (_db, _record_history, _embed, etc.) are registered in
# _LAZY_IMPORTS and resolved at runtime — Ruff's static analysis can't see
# through __getattr__, so F821 is a false positive for this file.
"bin/memory_core.py" = ["F821"]
# dashboard_server.py imports Any via TYPE_CHECKING guard; F821 is spurious.
"bin/dashboard_server.py" = ["F821"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Match the codebase's pre-PEP 484 style: `def f(x: str = None)` means Optional.
implicit_optional = true
# False positives from narrowing around None checks are noisy in legacy code
# that still leans on runtime checks rather than type guards.
strict_optional = false
# warn_unused_ignores off globally because per-file overrides below use
# ignore_errors = true (which trips this warning on real # type: ignore lines
# elsewhere in those modules). Revisit if we get the legacy files typed.
warn_unused_ignores = false

# ── Per-module overrides ──────────────────────────────────────────────────────
# memory_bridge.py exposes every tool from mcp_tool_catalog at import time via
# `globals()[name] = fn`. Mypy can't see these, so any module that imports a
# tool-shaped name from memory_bridge will light up with attr-defined errors
# (~55 of 184 total). The registration pattern is load-bearing — refactoring
# to an explicit registry would touch every call site across bin/ and memory/.
# Silence the false-positive class by not checking memory_bridge itself and
# ignoring attr-defined on its importers.
[[tool.mypy.overrides]]
module = "memory_bridge"
ignore_errors = true

# Legacy untyped modules — typing them is a separate project, not a CI gate.
# Each file listed here has >3 errors that aren't real bugs, just missing
# annotations on params/returns or loose dict/list unions. Trim this list as
# modules get typed.
[[tool.mypy.overrides]]
module = [
    "test_memory_bridge",
    "memory_core",
    "m3_sdk",
    "chatlog_core",
    "agent_protocol",
    "chatlog_init",
    "knowledge_helpers",
    "mission_control",
    "chatlog_redaction",
    "temporal_utils",
    "debug_agent_bridge",
    "setup_secret",
    "migrate_flat_memory",
    "chatlog_ingest",
    "aider_patch",
    "test_mission_control",
    "news_fetcher",
    "mcp_proxy",
    "custom_tool_bridge",
    "embed_agent_instructions",
    "chroma_sync_cli",
    "dashboard_server",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: long-running tests (>1s); use -m 'not slow' to skip",
    "real_is_current: opt out of the rust_core_install is_rust_core_current autouse stub",
]

[tool.bandit]
exclude_dirs = ["tests", "benchmarks", ".venv", "venv"]
# B101: asserts in tests are expected.
# B404: every bin/ tool that shells out imports `subprocess`; the import itself
#   isn't a vulnerability, only specific call patterns are.
# B110: try/except/pass is idiomatic in the bridge/daemon fail-open paths in
#   this repo. Individual cases that hide real bugs are addressed via code
#   review, not by flagging every swallow.
# B112: try/except/continue — same reasoning as B110.
# B603: subprocess call with shell=False and a static argv list is safe here;
#   all subprocess targets in bin/ are OS binaries (git, security, lsof, etc.)
#   invoked with non-user-controllable args. Call sites that take user input
#   are already audited.
# B607: partial executable paths ("git", "docker") rely on $PATH, which in
#   our user-facing CLI context is acceptable. Hardened deployments should
#   set absolute paths via env.
# B608: f-string SQL construction in this repo only ever inlines generated
#   `?` placeholder lists or static column names — all user values reach the
#   DB through the parameter tuple. Bandit's regex can't distinguish safe
#   from unsafe f-string SQL; code review catches new unsafe sites.
# B311: `random.sample` flagged as not cryptographically secure. The three
#   call sites in bin/m3_enrich.py are statistical sampling for the
#   `--sample N` CLI flag (pick N random conversations to enrich for
#   dev/bench runs); reproducible sampling is the goal, not entropy.
#   `secrets` module would be wrong here. Documented in
#   docs/audits/security-scan-2026-05-01.md.
# B606: `os.execv(sys.executable, ...)` in the UTF-8 re-exec helper
#   (m3_sdk.ensure_utf8 / m3_memory.cli) re-launches THIS interpreter with
#   `-X utf8` and a fixed argv derived from sys.orig_argv — no shell, no
#   user-controlled program path. It is process-replacement of self, not
#   spawning an external program; the B606 "no shell" heuristic does not apply.
# B105: `_LAZY_IMPORTS` in memory_core.py maps symbol names to module-path strings
#   (e.g. "M3_CLOUD_AUTH_TOKEN_KEYRING": "memory.config"). Bandit's regex matches
#   on the key containing "TOKEN"/"KEYRING" and flags the module-path value as a
#   hardcoded credential — a false positive. No actual credential is stored here;
#   this is a pure symbol→module routing table for the lazy-import shim.
skips = ["B101", "B105", "B110", "B112", "B311", "B404", "B603", "B606", "B607", "B608"]

